<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isSigningUp"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragmenets.LoginFragment">


        <ImageButton
            android:id="@+id/backFromSigUp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/imageForLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/san_francisco_font"
                android:letterSpacing=".05"
                android:text="Sign up"
                android:textColor="@color/TextColor"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SignUpPhoneNumber_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/auth_edit_texts_bg"
                android:drawableLeft="@drawable/phone_icon_selector"
                android:drawablePadding="@dimen/p8dp"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10"

                android:maxLines="1"
                android:paddingHorizontal="12sp"
                android:paddingVertical="17dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/SignUpPassword_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/p8dp"
                android:background="@drawable/auth_edit_texts_bg"
                android:drawableLeft="@drawable/lock_icon_selector"
                android:drawablePadding="@dimen/p8dp"
                android:hint="@string/password"
                android:paddingVertical="17dp"
                android:inputType="textPassword"
                android:drawableRight="@drawable/ic_visibility_off"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingHorizontal="12sp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/auth_edit_texts_bg"
                android:drawableLeft="@drawable/confirm_password_selector"
                android:drawablePadding="@dimen/p8dp"
                android:hint="@string/confim_password"
                android:inputType="textPassword"
                android:maxLength="40"
                android:maxLines="1"
                android:paddingVertical="17dp"
                android:paddingHorizontal="12sp"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <Button
                    android:id="@+id/RegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_bg_r14"
                    android:backgroundTint="@color/primaryOrange"
                    android:fontFamily="@font/san_francisco_font"
                    android:letterSpacing=".04"
                    android:text="@string/registerText"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingVertical="16dp"
                    android:textStyle="bold"
                    android:visibility="@{isSigningUp ? View.GONE : View.VISIBLE , default=visible}"
                    />

                <ProgressBar
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:visibility="@{isSigningUp ? View.VISIBLE : View.GONE , default=gone}" />

            </FrameLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="4dp"

            android:background="@color/AntiFlashWhite"
            app:layout_constraintBottom_toTopOf="@id/imageForLogin" />

        <ImageView
            android:id="@+id/imageForLogin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="-64dp"
            android:layout_marginBottom="-64dp"
            android:src="@drawable/pizza_for_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent=".5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>