<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="12dp"
        android:paddingTop="12dp"
        android:background="@color/white"
        tools:context=".views.activities.CheckoutActivity">




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buyingState2"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".65"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backBtn"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/state1"
                android:layout_width="@dimen/state_button_size"
                android:layout_height="@dimen/state_button_size"
                android:text="1"
                android:textColor="@color/white"
                android:background="@drawable/selected_circle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/line1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="@dimen/state_line_height"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/selected_line"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/state2"
                app:layout_constraintLeft_toRightOf="@id/state1"
                />

            <Button
                android:id="@+id/state2"
                android:layout_width="@dimen/state_button_size"
                android:layout_height="@dimen/state_button_size"
                android:text="2"

                app:layout_constraintRight_toLeftOf="@id/line2"
                android:textColor="@color/white"
                android:background="@drawable/selected_circle"
                app:layout_constraintTop_toTopOf="@id/state1"
                app:layout_constraintBottom_toBottomOf="@id/state1"
                app:layout_constraintLeft_toRightOf="@id/line1"
                />

            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="@dimen/state_line_height"
                android:background="@drawable/non_selected_line"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/state3"
                app:layout_constraintLeft_toRightOf="@id/state2"
                />

            <Button
                android:id="@+id/state3"
                android:layout_width="@dimen/state_button_size"
                android:layout_height="@dimen/state_button_size"
                android:text="3"
                android:textColor="@color/white"
                android:background="@drawable/non_selected_circle"
                app:layout_constraintTop_toTopOf="@id/state2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/state2"
                app:layout_constraintLeft_toRightOf="@id/line2"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="32dp"
            android:foregroundGravity="center"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            />

        <TextView
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/TextColor"
            android:gravity="center"
            android:text="@string/checkout_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/backBtn"

            />


        <ScrollView
            android:overScrollMode="never"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/placeOrder"
            app:layout_constraintTop_toBottomOf="@id/buyingState2"
            >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp"
            >

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/address_text"
                android:textSize="@dimen/labels_in_checkout_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bitween_label_and_edit_text_size"
                android:background="@drawable/edit_text_address_bg"
                android:drawableLeft="@drawable/location_selector"
                android:drawablePadding="6dp"
                android:fontFamily="@font/san_francisco_font"
                android:hint="@string/address_hint"
                android:maxLines="8"
                android:paddingVertical="@dimen/edit_texts_in_checkout_padding_vertical"
                android:paddingHorizontal="12dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/addressLabel" />


            <TextView
                android:id="@+id/phoneNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bitween_checkout_items"
                android:text="Phone Number"
                android:textSize="@dimen/labels_in_checkout_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/addressEditText" />

            <EditText

                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:layout_marginTop="@dimen/margin_bitween_label_and_edit_text_size"
                android:background="@drawable/edit_text_address_bg"
                android:drawableLeft="@drawable/phone_icon_selector"
                android:drawablePadding="6dp"
                android:fontFamily="@font/san_francisco_font"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:maxLines="1"
                android:paddingVertical="@dimen/edit_texts_in_checkout_padding_vertical"
                android:paddingHorizontal="12dp"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel" />

            <TextView
                android:id="@+id/paymentMethodLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bitween_checkout_items"
                android:text="Payment method"
                android:textSize="@dimen/labels_in_checkout_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

            <LinearLayout

                android:id="@+id/paymentMethodLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bitween_label_and_edit_text_size"
                android:fontFamily="@font/san_francisco_font"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodLabel">


                <ImageButton
                    android:layout_width="24dp"

                    android:layout_gravity="center_vertical"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_radio_button_checked" />

                <LinearLayout
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >

                <ImageButton
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/cash_on_delivery" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/san_francisco_font"
                    android:gravity="center_vertical"
                    android:text="cash paymnet"
                    android:textSize="18sp"

                    />
                    </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/orderInfoLable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bitween_checkout_items"
                android:text="@string/order_information_label"
                android:textSize="@dimen/labels_in_checkout_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodLinearLayout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bitween_label_and_edit_text_size"
                android:paddingVertical="8dp"
                android:background="@drawable/edit_text_address_bg"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/orderInfoLable"

                >

                <LinearLayout

                    android:id="@+id/subTotalLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/order_info_item_margin"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/san_francisco_font"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:textSize="18sp">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/san_francisco_font"
                        android:gravity="center_vertical"
                        android:text="@string/subtotal_label_text"
                        android:textSize="18sp"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/san_francisco_font"
                        android:gravity="center_vertical|right"
                        android:text="650 DA"
                        android:textColor="@color/TextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout

                    android:id="@+id/shippingLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/order_info_item_margin"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/san_francisco_font"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:textSize="18sp">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/san_francisco_font"
                        android:gravity="center_vertical"
                        android:text="@string/shipping_text"
                        android:textSize="18sp"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/san_francisco_font"
                        android:gravity="center_vertical|right"
                        android:text="0 DA"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginVertical="12dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/dashed_line" />


                <LinearLayout

                    android:id="@+id/totalPriceLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/order_info_item_margin"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/san_francisco_font"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:textSize="18sp">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/san_francisco_font"
                        android:gravity="center_vertical"
                        android:text="@string/total_text"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/san_francisco_font"
                        android:gravity="center_vertical|right"
                        android:text="650 DA"
                        android:textColor="@color/primaryOrange"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:textSize="17sp"
            android:text="PLACE order"
            android:textColor="@color/white"
            android:paddingVertical="15dp"
            android:background="@drawable/rounded_button_bg_r14"
            android:backgroundTint="@color/primaryOrange"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>